[package]
name = "pmap-dotnet"
version = "0.1.0"
edition = "2021"
exclude = ["demo_data/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
enumflags2 = "0.7.8"
file_system = "0.3.3"
